Moved hard-coded strings into resources file, except for variables already declared as static.